--- a/letAndConst.html
+++ b/letAndConst.html
@@ -8,10 +8,20 @@
 		const key = 'abc123';
 		var points = 50;
 		let winner = false; 
-
 		var points = 60; 
+
 		// var variable can be redefined further in the program without the console whinning about it. let and consts cannot, once they are defined, that is it. They will raise a red flag. 
 
+		// const variables cannot be updated where as let variables are ment to. 
+
+		if(points > 40) {
+			console.log("it ran!");
+			let winner = true; 
+		}
+
+
+		points = 50;
+		key = 'abc1234'
 
 	</script>
 
