--- a/letAndConst.html
+++ b/letAndConst.html
@@ -23,6 +23,14 @@
 		points = 50;
 		// key = 'abc1234'
 
+
+		const person = {
+			name: 'Katherine',
+			hair: 'Brown',
+			
+
+		}
+
 	</script>
 
 </body>
