added more notes

--- a/letAndConst.html
+++ b/letAndConst.html
@@ -27,9 +27,9 @@
 		const person = {
 			name: 'Katherine',
 			hair: 'Brown',
-			
-
 		}
+
+		const katherine = Object.freeze(person);
 
 	</script>
 
