scope var const let

--- a/ScopeVarConstLet.html
+++ b/ScopeVarConstLet.html
@@ -42,8 +42,8 @@
 		console.log('You are ${dogYears} dog years old!'); 
 	}
 
-	var is function scope 
-	const and let are block 
+	// var is function scope 
+	// const and let are block 
 
 
 	let height = 200; 
