working with let and var within console

--- a/letconstrealworld.html
+++ b/letconstrealworld.html
@@ -25,6 +25,14 @@
 		},1000);
 	}
 
+	for(let i = 0; i <10; i++) {
+		console.log(i);
+		setTimeout(function() {
+			console.log('The number is ' + i);
+		}, 1000);
+	}
+	
+
 </script>
 </body>
 </html>
