working with a smile

--- a/tempdeadzone.html
+++ b/tempdeadzone.html
@@ -8,10 +8,8 @@
 <body>
 
 	<script>
-		console.log(pizza);
-		var smile = 'Yeah, it`'`s a smile! :octocat:';
-
-
+		console.log(smile);
+		var smile = 'Yeah, it is a smile!';
 	</script>
 
 </body>
