adding different types of mapping

--- a/arrow.html
+++ b/arrow.html
@@ -8,7 +8,26 @@
 	<script>
 		const names = ['katherine', 'sammy', 'suzie']
 
+		const fullNames = names.map(function(name) {
+			return `${name} awesome`;
+		});
+
+		const fullNames2 = names.map((name) => {
+			return `${name} awesome`;
+		});
+
+		const fullNames3 = names.map(name => {
+			return `${name} awesome`;
+		});
+
 		
+
+
+
+		console.log(fullNames2)	
+		console.log(fullNames3)
+		console.log(fullNames4)	
+		console.log(fullNames5)			
 
 	</script>
 
