adding to arrow

--- a/arrow.html
+++ b/arrow.html
@@ -20,10 +20,8 @@
 			return `${name} awesome`;
 		});
 
-		
 
-
-
+		console.log(fullNames1)	
 		console.log(fullNames2)	
 		console.log(fullNames3)
 		console.log(fullNames4)	
