adding map functions in different ways

--- a/arrow.html
+++ b/arrow.html
@@ -8,7 +8,7 @@
 	<script>
 		const names = ['katherine', 'sammy', 'suzie']
 
-		const fullNames = names.map(function(name) {
+		const fullNames1 = names.map(function(name) {
 			return `${name} awesome`;
 		});
 
@@ -20,12 +20,14 @@
 			return `${name} awesome`;
 		});
 
+		const fullNames4 = names.map(name => `${name} WayCool`);
+
 
 		console.log(fullNames1)	
 		console.log(fullNames2)	
 		console.log(fullNames3)
 		console.log(fullNames4)	
-		console.log(fullNames5)			
+		// console.log(fullNames5)			
 
 	</script>
 
