working on a map table within chrome console

--- a/ArrowTwo.html
+++ b/ArrowTwo.html
@@ -4,14 +4,12 @@
 	<title>
 
 		<script>
-			const type = 'blue'
-			const won = ['Susie Green', 'Mary Poppins', 'Peter Pan']
+			const type = 'a disney character';
+			const characters = ['Minnie Mouse', 'Mary Poppins', 'Peter Pan'];
 
-
-
+			const disney = characters.map((character, i) => ({name: character, type: type, number: i + 1}))
 
 		</script>
-		
 
 	</title>
 </head>
