adding style to js functions

--- a/ArrowTwo.html
+++ b/ArrowTwo.html
@@ -7,7 +7,9 @@
 			const type = 'a disney character';
 			const characters = ['Minnie Mouse', 'Mary Poppins', 'Peter Pan'];
 
-			const disney = characters.map((character, i) => ({name: character, type: type, number: i + 1}))
+			const disney = characters.map ( 
+				(character, i) => ({name: character, type: type, number: i + 1}) 
+			)
 
 		</script>
 
