placed script in head opposed to body

--- a/ArrowTwo.html
+++ b/ArrowTwo.html
@@ -2,20 +2,14 @@
 <html>
 <head>
 	<title>
-
-		<script>
-			const type = 'a disney character';
-			const characters = ['Minnie Mouse', 'Mary Poppins', 'Peter Pan'];
-
-			const disney = characters.map ( 
-				(character, i) => ({name: character, type: type, number: i + 1}) 
-			)
-
-		</script>
-
 	</title>
 </head>
 <body>
+		<script>
+			const type = 'a character';
+			const characters = ['Minnie Mouse', 'Mary Poppins', 'Peter Pan'];
+			const win = characters.map((character, i) => ({name: characters, type, place: i + 1}))
+		</script>
 	
 </body>
 </html>
