adding more changes

--- a/thisarrow.html
+++ b/thisarrow.html
@@ -51,8 +51,8 @@
 
   <div class="wrap">
     <div class="box">
-      <h2>Wes Bos</h2>
-      <p class="social">@wesbos</p>
+      <h2>Katherine Worley</h2>
+      <p class="social">@worleykatherine</p>
     </div>
   </div>
 
@@ -72,7 +72,7 @@
       });
   </script>
 
-  
+
 
 
 </body>
