adding button and this

--- a/noarrowfunction.html
+++ b/noarrowfunction.html
@@ -4,9 +4,48 @@
 	<title>doing use that arrow function... ya hear me?</title>
 </head>
 <body>
+	
+<style>
+  button { font-size: 100px; }
+  .on { background: #ffc600; }
+</style>
+<button id="pushy">Push Me</button>
 
 <script>
-	
+  // When you really need `this`
+  const button = document.querySelector('#pushy');
+  button.addEventListener('click', function() {
+    console.log(this);
+    this.classList.toggle('on');
+  });
+  // When you need a method to bind to an object
+  const person = {
+    points: 23,
+    score() {
+      console.log(this);
+      this.points++;
+    }
+  }
+  // When you need to add a prototype method
+  class Car {
+    constructor(make, color) {
+      this.make = make;
+      this.color = color;
+    }
+  }
+  const beemer = new Car('bmw', 'blue');
+  const subie = new Car('Subaru', 'white');
+  Car.prototype.summarize = function() {
+     return `This car is a ${this.make} in the colour ${this.color}`;
+  };
+  // When you need arguments object
+  const orderChildren = function() {
+    const children = Array.from(arguments);
+    return children.map((child, i) => {
+      return `${child} was child #${i + 1}`;
+    })
+    console.log(arguments);
+  }
 
 
 
