calling objects in console

--- a/noarrowfunction.html
+++ b/noarrowfunction.html
@@ -27,6 +27,7 @@
     }
   }
   // When you need to add a prototype method
+  // Call the object then a dot notation to call each 
   class Car {
     constructor(make, color) {
       this.make = make;
