adding data time

--- a/ArrowFunctions.html
+++ b/ArrowFunctions.html
@@ -6,12 +6,14 @@
 </head>
 <body>
 
+<ul>
 <li data-time="5:17">Flexbox Video</li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
+<li data-time="4:37">Flexbox Video</li>
+<li data-time="7:27">Flexbox Video</li>
+<li data-time="9:25">Flexbox Video</li>
+<li data-time="8:12">Flexbox Video</li>
+<li data-time="1:59">Flexbox Video</li>
+</ul>
 
 
 
