--- a/ArrowFunctions.html
+++ b/ArrowFunctions.html
@@ -15,7 +15,25 @@
 <li data-time="1:59">Flexbox Video</li>
 </ul>
 
+<script>
 
+// <!-- Select all the list items on the page and convert to an array -->
+const items = Array.from(document.querySelectorAll('[data-time]'));
+console.log(items);
+
+// <!-- Filter for only the elements that contain the word 'flexbox' -->
+
+// <!-- Map down to a list of time strings -->
+
+// <!-- Map to an array of seconds -->
+
+// <!-- Reduce to an array of seconds -->
+
+// <!-- Reduce to get total  -->
+
+// <!-- This can also be done in a sing, reduce(), but we're practicing arrow functions here, so no chain.  -->
+
+</script>
 
 </body>
 </html>
