grabbed data in the dom and filtered numbers greater than 70

--- a/ArrowFunctionsTwo.html
+++ b/ArrowFunctionsTwo.html
@@ -8,11 +8,8 @@
 
 	<script>
 		const numbers = [3,62,234,7,23,74,23,76,92];
-
-
-
-
-
+		const large = numbers.filter(num => num > 70);
+		console.log(large);
 	</script>
 
 </body>
