--- a/ArrowFunctions.html
+++ b/ArrowFunctions.html
@@ -20,14 +20,17 @@
 // <!-- Select all the list items on the page and convert to an array -->
 const items = Array.from(document.querySelectorAll('[data-time]'));
 // <!-- Filter for only the elements that contain the word 'flexbox' -->
-const filtered = items.filter(item => item.textContent.includes('Flexbox'));
+const filtered = items
+	.filter(item => item.textContent.includes('Flexbox'))
 // <!-- Map down to a list of time strings -->
-
+	.map(item => item.dataset.time) // data-time 
 // <!-- Map to an array of seconds -->
-
-// <!-- Reduce to an array of seconds -->
-
+	.map(timecode => {
+		const parts = timecode.split(':').map(part => parseFloat(part));
+		return (parts[0] * 60) + parts[1];
+	})
 // <!-- Reduce to get total  -->
+	.reduce((runningTotal, seconds) => runningTotal + seconds,0)
 
 // <!-- This can also be done in a sing, reduce(), but we're practicing arrow functions here, so no chain.  -->
 
