--- a/TemplateString.html
+++ b/TemplateString.html
@@ -5,5 +5,14 @@
 </head>
 <body>
 
+<script>
+	const name = 'Snickers';
+	const age = 2; 
+	const sentence1 = 'My cat ' + name + ' is ' + age * 7 + ' years old. ';
+	const sentence2 = `My cat ${name} is ${age * 7} years old.`;
+	console.log(sentence1);
+	console.log(sentence2);
+</script>
+
 </body>
 </html>
