updating 2 variables declared with same name

--- a/MoreTemplateStrings.html
+++ b/MoreTemplateStrings.html
@@ -35,7 +35,7 @@
 			{ name: 'Toulouse', age: 12 },
 		];
 
-		const markup = `
+		const markup2 = `
 			<ul class="dogs">
 			${dogs.map(dog => `<li>${dog.name} is ${dog.age * 7}</li>`)}
 			</ul>
