added if statement

--- a/IfStatement.html
+++ b/IfStatement.html
@@ -15,10 +15,11 @@
 		const markup = `
 		<div class="song">
 			<p>
-				
+				${song.name} - ${song.artist}
+				${song.featuring ? `(Featuring ${song.featuring})`:
+					''}
 			</p>
 		</div>
-
 		`;
 
 		document.body.innerHTML = markup; 
