adding cost person and var text

--- a/NoFunnyBusiness.html
+++ b/NoFunnyBusiness.html
@@ -5,8 +5,18 @@
 </head>
 <body>
 
-<script></script>
+<script>
+	
 
+const person = {
+	name: 'Katherine',
+	job: 'generally an all around cool gal',
+	city: 'Tampa',
+	bio: 'graphic designer turned data organizer.'
+};
 
+var text = "Yo Yo Yo"
+
+</script>
 </body>
 </html>
