--- a/NoFunnyBusiness.html
+++ b/NoFunnyBusiness.html
@@ -23,9 +23,9 @@ const markup = `
 		</h2>
 		<p class="location">${person.bio}</p>
 	</div>
+`;
 
-
-`
+document.body.innerHTML = markup;
 
 </script>
 </body>
