--- a/Array.html
+++ b/Array.html
@@ -9,14 +9,21 @@
 	const cats = [
 		{ name: 'Cotton', age: 15 },
 		{ name: 'Spot', age: 10 },
-		{ name: 'Toulouse', age: 12 },
+		{ name: 'Toulouse', age: 12 }
 	];
 
 	const markup = `
 		<ul class="loop">
-		 #{cats.map(cat => `<li>${cat.name} is ${cat.age + 5 }</li>`)}
+		 #{cats.map(cat => `
+		 	<li>
+		 		${cat.name}
+		 		is ${cat.age + 5 }
+		 	</li>
+		 	`).join('')}
 		</ul>
 	`;
+
+document.body.innerHTML = markup;
 
 
 </script>
