adding const name

--- a/TaggedTemplate.html
+++ b/TaggedTemplate.html
@@ -5,5 +5,15 @@
 </head>
 <body>
 
+	<script>
+		const name = 'Toulouse';
+		const age = 100; 
+		const sentence = `My dog's name is ${name} and he is ${age} years old`;
+		console.log(sentence)
+
+
+
+	</script>
+
 </body>
 </html>
