--- a/TaggedTemplate.html
+++ b/TaggedTemplate.html
@@ -6,11 +6,15 @@
 <body>
 
 	<script>
+		function highlight(srings, ...values) {
+			debugger;
+
+		}
+
 		const name = 'Toulouse';
 		const age = 100; 
-		const sentence = `My dog's name is ${name} and he is ${age} years old`;
+		const sentence = highlight`My dog's name is ${name} and he is ${age} years old`;
 		console.log(sentence)
-
 
 
 	</script>
