--- a/AnotherTaggedTemplate.html
+++ b/AnotherTaggedTemplate.html
@@ -6,10 +6,14 @@
 <body>
 
 	<script>
-			
+		const dict = {
+			HTML: 'Hyper Text Markup Language',
+			CSS: 'Cascading Style Sheets',
+			JS: 'JavaScript'
+		};
 
-
-
+		const first = 'Katherine';
+		const last = 'Worley';
 	</script>
 
 </body>
