adding tag to const sentence

--- a/AnotherTaggedTemplate.html
+++ b/AnotherTaggedTemplate.html
@@ -18,14 +18,16 @@
 					return `<abbr title="${dict[value]}">${value}</abbr>`
 				}
 			});
+			console.log(abbreviated);
 		}
 
 		const first = 'Katherine';
 		const last = 'Worley';
-		const sentence = `Hello may name is ${first} ${last} and I love to code ${'HTML'}, ${'CSS'} and ${'JS'}`;
+		const sentence = addAbbreviations`Hello may name is ${first} ${last} and I love to code ${'HTML'}, ${'CSS'} and ${'JS'}`;
 
 		const bio = document.querySelector('.bio');
 		const p = document.createElement('p');
+		
 		p.innerHTML = sentence;
 		bio.appendChild(p);
 	</script>
