adding console log to abbreviated

--- a/AnotherTaggedTemplate.html
+++ b/AnotherTaggedTemplate.html
@@ -17,6 +17,7 @@
 				if(dict[value]) {
 					return `<abbr title="${dict[value]}">${value}</abbr>`
 				}
+				return value;
 			});
 			console.log(abbreviated);
 		}
