fixed error missing bio div class

--- a/AnotherTaggedTemplate.html
+++ b/AnotherTaggedTemplate.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title>Another Tagged Template</title>
+	<style>
+		
+	abbr {
+      border-bottom:1px dotted grey;
+    }
+	
+	</style>
 </head>
 <body>
+    <div class="bio">
+  	</div>
 
 	<script>
 		const dict = {
