--- a/SanitizingUserData.html
+++ b/SanitizingUserData.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>sanitizing user data</title>
+  <meta charset="UTF-8">
+  <title>Tagged Templates</title>
 
+  <style>
+    abbr {
+      border-bottom:1px dotted grey;
+    }
+  </style>
 </head>
 <body>
-	<div class="bio">
-		
-	</div>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/1.0.6/purify.min.js"></script>
+  <div class="bio">
 
-	<script>
-		function sanitize(strings, ...values) {
-			const dirty = strings.reduce((prev, next, i) => `${prev}${next}${values[i]} || ''}`, '');
-			return DOMPurify.sanitize(dirty);
-		}
+  </div>
 
-		const first = "katherine"
-		const aboutMe = `I love to do stuff and things. <img src="https://www.fillmurray.com/200/300" alt="Fill Murray" onload="alert('you got fill murray');" />`;
-		
-		const html = sanitize `
-		<h3>${first}</h3>
-		<p>${aboutMe}</p>
-		`;
+<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/1.0.6/purify.min.js"></script>
+<script>
+  function sanitize(strings, ...values) {
+    const dirty = strings.reduce((prev, next, i) => `${prev}${next}${values[i] || ''}`, '');
+    return DOMPurify.sanitize(dirty);
+  }
+  const first = 'katherine';
+  const aboutMe = `I love to do stuff and things. <img src="https://www.fillmurray.com/200/300" alt="Fill Murray" onload="alert('you got fill murray');" />`;
 
-		const bio = document.querySelector('.bio');
-		bio.innerHTML = html; 
-	</script>
-
+  const html = sanitize`
+    <h3>${first}</h3>
+    <p>${aboutMe}</p>
+  `;
+  const bio = document.querySelector('.bio');
+  bio.innerHTML = html;
+</script>
 </body>
 </html>
