adding repeat within console log

--- a/NewStringMethod.html
+++ b/NewStringMethod.html
@@ -24,8 +24,9 @@
 			return `-> ${' '.repeat(length = str.length)}${str}`;
 		}
 		console.log(leftPad(make));
-		console.log(leftPad(make));
-		console.log(leftPad(make));
+		console.log(leftPad(model));
+		console.log(leftPad(color));
+		console.log(`${' heart ' * 5}`.repeat(10) + ' Batman!');
 
 	</script>
 
