adding sub nesting

--- a/DeconstructObjects.html
+++ b/DeconstructObjects.html
@@ -7,12 +7,29 @@
 
 <script>
 	const person = {
-		first: 'katherine';
-		last: 'worley';
-		country: 'USA';
-		city: 'tampa';
-		twitter: '@worleykatherine';
+		first: 'katherine',
+		last: 'worley',
+		country: 'USA',
+		city: 'tampa',
+		twitter: '@worleykatherine'
 	};
+
+	const { first, last, twitter } = person;
+
+
+	const katherine = {
+		first: 'katherine',
+		last: 'worley',
+		links: = {
+				social = {
+				first: 'katherine',
+				last: 'worley',
+				country: 'USA',
+				city: 'tampa',
+				twitter: '@worleykatherine'
+		};
+			},
+		};
 
 </script>
 
