added social and web to links

--- a/DeconstructObjects.html
+++ b/DeconstructObjects.html
@@ -20,17 +20,17 @@
 	const katherine = {
 		first: 'katherine',
 		last: 'worley',
-		links: = {
-				social = {
-				first: 'katherine',
-				last: 'worley',
-				country: 'USA',
-				city: 'tampa',
-				twitter: '@worleykatherine'
+			links: = {
+					social = {
+					twitter: '@worleykatherine'
+					linkedin: 'katherineworley'
+					};
+					web = {
+					person: 'https://www.katherineworley.com'
+					github: 'https://github.com/KatherineWorley'
+					};
+			};
 		};
-			},
-		};
-
 </script>
 
 
