--- a/DeconstructObjects.html
+++ b/DeconstructObjects.html
@@ -33,8 +33,16 @@
 			}
 		}
 
+	// EITHER
 	const { twitter, linkedin } = katherine.links.social; 	
-	
+
+	// OR
+	const { twitter:tweet, linkedin:li } = katherine.links.social; 	
+
+
+
+	var settings = { width: 300, color: 'black' } //height, fontsize 
+	stop at 2;59
 
 </script>
 
