--- a/DeconstructObjects.html
+++ b/DeconstructObjects.html
@@ -41,8 +41,8 @@
 
 
 
-	var settings = { width: 300, color: 'black' } //height, fontsize 
-	stop at 2;59
+	const settings = { width: 300, color: 'black' } //height, fontsize 
+	const { width = 100, height = 100, color = 'blue', fontsize = 35 } = settings; 
 
 </script>
 
