--- a/DestructingArrays.html
+++ b/DestructingArrays.html
@@ -10,6 +10,12 @@ const details = [ 'Katherine Worley', 456, 'katherineworley.com'];
 const name = details[0];
 const id = details[1];
 const website = details[2];
+
+console.log(name, id, website);
+
+const data = 'Volleyball,Sports,33654,43'
+
+
 </script>
 
 </body>
