--- a/DestructingArrays.html
+++ b/DestructingArrays.html
@@ -14,6 +14,10 @@ const website = details[2];
 console.log(name, id, website);
 
 const data = 'Volleyball,Sports,33654,43'
+const [itemName, category, sku, inventory] = data.split(',');
+console.log(itemName, category, sku, inventory);
+
+const team = ['Katherine', 'Bob', 'Peter', 'Suze', ]
 
 
 </script>
