adding const team

--- a/DestructingArrays.html
+++ b/DestructingArrays.html
@@ -17,9 +17,8 @@ const data = 'Volleyball,Sports,33654,43'
 const [itemName, category, sku, inventory] = data.split(',');
 console.log(itemName, category, sku, inventory);
 
-const team = ['Katherine', 'Bob', 'Peter', 'Suze', ]
-
-
+const team = ['Katherine', 'Bob', 'Peter', 'Suze', 'Patty'];
+const [captain, assistant, ...players] = team;
 </script>
 
 </body>
