updated console log

--- a/UseDestrucuringAction.html
+++ b/UseDestrucuringAction.html
@@ -4,15 +4,13 @@
 	<title>Destrucuring in Action</title>
 </head>
 <body>
-
 <script>
 	let inRing = 'Hulk Hogan';
 	let onSide = 'The Rock';
 
+	console.log(inRing, onSide);
 	[inRing, onSide] = [onSide, inRing];
-
+	console.log(inRing, onSide);
 </script>
-
-
 </body>
 </html>
