--- a/Destrucuring.html
+++ b/Destrucuring.html
@@ -4,7 +4,6 @@
 	<title>Destrucuring</title>
 </head>
 <body>
-
 	<script>
 		function convertCurrency(amount) {
 			const converted = {
@@ -12,15 +11,12 @@
 				GPB: amount * 0.53,
 				AUD: amount * 1.01,
 				MEX: amount * 13.30
-			}
-
-
+			};
+			return converted;
 		}
 
-
-
-
+		const [ USD, GSB, AUD, MEX ] = convertCurrency(100);
+		console.log(USD, GSB, AUD, MEX);
 	</script>
-
 </body>
 </html>
