--- a/iterable.html
+++ b/iterable.html
@@ -4,6 +4,12 @@
 	<title>Iterables and Looping</title>
 </head>
 <body>
+	<script>
+		const cuts = ['Chuck', 'Brisket', 'Shank', 'Short Rib'];
 
+		for (const cut of cuts) {
+			console.log(cut);
+		}
+	</script>
 </body>
 </html>
