adding cost of char

--- a/iterable.html
+++ b/iterable.html
@@ -22,6 +22,11 @@
 
 		addUpNumbers(10,23,53,34,12,13,123)
 
+		const name = 'Katherine Worley'
+		for (const char of name) {
+			console.log(char)
+		}
+
 	</script>
 </body>
 </html>
