--- a/iterable.html
+++ b/iterable.html
@@ -4,6 +4,10 @@
 	<title>Iterables and Looping</title>
 </head>
 <body>
+	<p>Hi I'm a paragraph 1</p>
+	<p>Hi I'm a paragraph 2</p>
+	<p>Hi I'm a paragraph 3</p>
+	<p>Hi I'm a paragraph 4</p>
 	<script>
 		const cuts = ['Chuck', 'Brisket', 'Shank', 'Short Rib'];
 
@@ -26,6 +30,7 @@
 		for (const char of name) {
 			console.log(char)
 		}
+
 
 	</script>
 </body>
