adding paragraph selectors

--- a/iterable.html
+++ b/iterable.html
@@ -31,7 +31,10 @@
 			console.log(char)
 		}
 
-
+		const ps = document.querySelectorAll('p')
+		for (const paragraph of ps) {
+			console.log(paragraph);
+		}
 	</script>
 </body>
 </html>
