adding const people array from

--- a/ArrayFromArrayOf.html
+++ b/ArrayFromArrayOf.html
@@ -10,10 +10,8 @@
 	</div>
 <body>
 	<script>
-		
-
-
-
+	const people = Array.from(document.querySelctorAll('.people p'));
+	const names = people.map(person => person.textContent);
 	</script>
 </body>
 </html>
