adding function of sumAll

--- a/ArrayFromArrayOf.html
+++ b/ArrayFromArrayOf.html
@@ -12,6 +12,12 @@
 	<script>
 	const people = Array.from(document.querySelctorAll('.people p'));
 	const names = people.map(person => person.textContent);
+
+	function sumAll() {
+
+	}
+	sumAll(2,34,12,34,54,34,65)
+
 	</script>
 </body>
 </html>
