adding array of numbers

--- a/ArrayFromArrayOf.html
+++ b/ArrayFromArrayOf.html
@@ -21,6 +21,9 @@
 	}
 	sumAll(2,34,12,34,54,34,65,34,65)
 
+	const ages = Array.of(43,24,54,56,67,29)
+	console.log(ages);
+
 	</script>
 </body>
 </html>
