are they old enough

--- a/SomeAndEvery.html
+++ b/SomeAndEvery.html
@@ -7,12 +7,15 @@
 
 	<script>
 		const ages = [32, 15, 19, 12]
+		const youngins = [1, 2, 3, 4, 5]
 
 		// is there at least one adult in the group?
-
+		const adultPresent = ages.sum(age => age <= 18);
+		console.log(adultPresent)
 
 
 		// is everyone old enough? 
+		const allOldEnough = ages.every(age => age >= 19);
 
 
 	</script>
