added console log

--- a/SomeAndEvery.html
+++ b/SomeAndEvery.html
@@ -16,8 +16,7 @@
 
 		// is everyone old enough? 
 		const allOldEnough = ages.every(age => age >= 19);
-
-
+		console.log(allOldEnough);
 	</script>
 
 </body>
