adding const of pizzas

--- a/TheSpreadOperator.html
+++ b/TheSpreadOperator.html
@@ -4,8 +4,13 @@
 	<title>The Spread Operator</title>
 </head>
 <body>
+	<script>
+		const featured = ['Deep Dish', 'Pepperoni', 'Hawaiian'];
+		const specialty = ['Meatzza', 'Spicy Mamma', ]
 
-	
 
+
+
+	</script>
 </body>
 </html>
