adding type size and ingredients

--- a/TheSpreadOperator.html
+++ b/TheSpreadOperator.html
@@ -6,7 +6,13 @@
 <body>
 	<script>
 		const featured = ['Deep Dish', 'Pepperoni', 'Hawaiian'];
-		const specialty = ['Meatzza', 'Spicy Mamma', ]
+		const specialty = ['Meatzza', 'Spicy Mamma', 'Margherita'];
+
+		const deepDish = [
+			pizzaname: 'Deep Dish',
+			size: 'Medium',
+			ingredients: ['Marinara', 'Italian Sausage', 'Dough', 'Cheese']
+		];
 
 
 
