--- a/TheSpreadOperator.html
+++ b/TheSpreadOperator.html
@@ -7,16 +7,17 @@
 	<script>
 		const featured = ['Deep Dish', 'Pepperoni', 'Hawaiian'];
 		const specialty = ['Meatzza', 'Spicy Mamma', 'Margherita'];
+		const pizzas = featured.concat(specialty);
+		console.log(pizzas);
 
-		const deepDish = [
-			pizzaname: 'Deep Dish',
+		const allPizzas = [...featured, 'veg', ...specialty];
+		const fridayPizzas = allPizzas
+
+		const deepDish = {
+			pizzaName: 'Deep Dish',
 			size: 'Medium',
 			ingredients: ['Marinara', 'Italian Sausage', 'Dough', 'Cheese']
-		];
-
-
-
-
+		};
 	</script>
 </body>
 </html>
