adding spread operator to insert new array from dom

--- a/TheSpreadOperator.html
+++ b/TheSpreadOperator.html
@@ -11,7 +11,7 @@
 		console.log(pizzas);
 
 		const allPizzas = [...featured, 'veg', ...specialty];
-		const fridayPizzas = allPizzas
+		const fridayPizzas = [...allPizzas];
 
 		const deepDish = {
 			pizzaName: 'Deep Dish',
