adding spread script to html body?

--- a/spread.html
+++ b/spread.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>The Spread</title>
 </head>
 <body>
+
+	<script>
+		
+
+		
+	</script>
 
 </body>
 </html>
