adding const of two

--- a/spread.html
+++ b/spread.html
@@ -6,9 +6,11 @@
 <body>
 
 	<script>
+		const inventors = ['Einstein', 'Newton', 'Galileo'];
+		const newInventors = ['Musk', 'Jobs'];
 		
 
-		
+
 	</script>
 
 </body>
