--- a/spread.html
+++ b/spread.html
@@ -8,8 +8,12 @@
 	<script>
 		const inventors = ['Einstein', 'Newton', 'Galileo'];
 		const newInventors = ['Musk', 'Jobs'];
-		
 
+		// inventors.push.apply(inventors, newInventors);
+		// console.log(inventors);
+
+		inventors.push(...newInventors);
+		console.log(inventors)
 
 	</script>
 
