spreading into a function

--- a/spread.html
+++ b/spread.html
@@ -15,6 +15,16 @@
 		inventors.push(...newInventors);
 		console.log(inventors)
 
+
+		const name = ['Wes', 'Bos'];
+
+		function sayHi(first, last) {
+			alert(`Hey there ${first} ${last}`);
+		}
+		sayHi(name[0], name[1]);
+
+		sayHi(...name)
+
 	</script>
 
 </body>
