--- a/restParam.html
+++ b/restParam.html
@@ -13,6 +13,11 @@
 
 	const amounts = convertCurrency(1.54, 10, 23, 52, 1, 6); 
 	console.log(amounts);
+
+
+	const runner = ['Katherine', 123, 44, 34, 5, 6, 24];
+	const [name, id, ...runs] = runner; 
+	console.log(name, id, runs);
 </script>
 
 </body>
