adding more object literals

--- a/restParam.html
+++ b/restParam.html
@@ -18,6 +18,10 @@
 	const runner = ['Katherine', 123, 44, 34, 5, 6, 24];
 	const [name, id, ...runs] = runner; 
 	console.log(name, id, runs);
+
+	const team = ['Katherine', 'Pete', 'Steve', 'Mary', 'Sammy'];
+	const [cap, asst, ...players] = team;
+	console.log(cap, asst, players)
 </script>
 
 </body>
