--- a/ObjectLit.html
+++ b/ObjectLit.html
@@ -12,10 +12,11 @@
 		const breed = 'Orange Tabby';
 
 		const cat = {
-			first,
+			firstName: first,
 			last,
 			age,
 			breed,
+			pals: ['Alex', 'MeMe']
 		};
 		console.log(cat)
 
