adding colors to tShirts

--- a/ObjectLit.html
+++ b/ObjectLit.html
@@ -20,6 +20,28 @@
 		};
 		console.log(cat)
 
+		const modal = {
+			create(selector){
+
+			},
+			open(content) {
+
+			},
+			close(goodbye) {
+
+			}
+		}
+
+		function invertColor
+
+		const key = 'pocketColor';
+		const value = 'yellow';
+
+		const tShirt = {
+			[key]: value
+		};
+
+		console.log(tShirt)
 	</script>
 
 </body>
