adding variable color change in function

--- a/ObjectLit.html
+++ b/ObjectLit.html
@@ -32,13 +32,16 @@
 			}
 		}
 
-		function invertColor
+		function invertColor(color) {
+			return '#' + ("000000" + (0xFFFFFF ^ parseInt(color.substring(1), 16)).toString(16)).slice(-6);
+		}
 
 		const key = 'pocketColor';
 		const value = 'yellow';
 
 		const tShirt = {
 			[key]: value
+			[`${key}Opposite`]: invertColor(value)
 		};
 
 		console.log(tShirt)
