adding more data variables for the json fetch

--- a/Promises.html
+++ b/Promises.html
@@ -12,13 +12,11 @@
 		// console.log(posts);
 
 			const postPromise = fetch('http://wesbos.com/wp-json/ep/v2/posts');
-			postPromise.then(data => {
-				console.log(data);
-			})
+			postPromise.then(data => data.json()).then(data => { console.log(data) })
 			// this is a callback function. 
-			$('a').on('click',function() {
-				alert('hey');
-			})		
+			// $('a').on('click',function() {
+			// 	alert('hey');
+			// })		
 	</script>
 
 </body>
