--- a/Promises2.html
+++ b/Promises2.html
@@ -7,14 +7,17 @@
 
 	<script>
 		const p = new Promise((resolve, reject) => {
-			resolve('Katherine is cool');
+			setTimeout(() => {
+				reject('Katherine is cool');
+
+			})
 		});
 
 		p 
 			.then(data = > {
 				console.log(data);
 			})
-			
+
 	</script>
 
 </body>
