adding authors and posts

--- a/ChainPromise.html
+++ b/ChainPromise.html
@@ -6,9 +6,17 @@
 <body>
 
 <script>
-	
+	cost posts = [
+		{ title: 'I love JavaScript, too', author: 'Katherine', id: 1},
+		{ title: 'I love JavaScript, as well', author: 'Mary', id: 2},
+		{ title: 'I love JavaScript', author: 'Suzen', id: 3},
+	];
 
-	
+	cost author = [
+		{ title: 'I love JavaScript, too', author: 'Katherine', id: 1},
+		{ title: 'I love JavaScript, as well', author: 'Mary', id: 2},
+		{ title: 'I love JavaScript', author: 'Suzen', id: 3},
+	];
 </script>
 
 </body>
