--- a/ChainPromise.html
+++ b/ChainPromise.html
@@ -6,6 +6,7 @@
 <body>
 
 <script>
+
 	cost posts = [
 		{ title: 'I love JavaScript, too', author: 'Katherine', id: 1},
 		{ title: 'I love JavaScript, as well', author: 'Mary', id: 2},
@@ -13,10 +14,11 @@
 	];
 
 	cost author = [
-		{ title: 'I love JavaScript, too', author: 'Katherine', id: 1},
-		{ title: 'I love JavaScript, as well', author: 'Mary', id: 2},
-		{ title: 'I love JavaScript', author: 'Suzen', id: 3},
+		{ name: 'Katherine Worley', twitter: '@Katherine', bio: 'Loves JavaScript' },
+		{ name: 'Mary Berry', twitter: '@Mary', bio: 'Also loves JavaScript' },
+		{ name: 'Suzen Mount', twitter: '@Suzen', bio: 'And yet again, loves JavaScript'},
 	];
+
 </script>
 
 </body>
